fixing align of elements in blogs

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -805,12 +805,7 @@ code{
 			> h3{
 				margin-top: 0;
 			}
-			> *:last-child{
-				margin-bottom: 0;
-				> *:last-child{
-					margin-bottom: 0;
-				}
-			}
+			.children-rm-m();
 		}
 	}
 }
@@ -1510,6 +1505,9 @@ div {
 			border-bottom: 0;
 			#main{
 				padding: 0;
+				> *{
+					width: auto;
+				}
 			}
 		}
 	}
@@ -1590,6 +1588,13 @@ div {
 		}
 	}
 
+	> .page-header,
+	> .cat-children,
+	> .category-desc{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
 	> .category-desc{
 		.clearfix();
 		border-bottom: 1px solid @color_three;
@@ -1597,7 +1602,10 @@ div {
 	}
 
 	.items-leading {
+		.box-sizing(border-box);
 		border-bottom: 1px solid @color_three;
+		padding-left: 20px;
+		padding-right: 20px;
 		[class*="leading-"]{
 			padding-bottom: 15px;
 			padding-top: 15px;
@@ -2003,4 +2011,14 @@ div {
 .jssocialicons-horizontal{
 	.clearfix();
 	margin-left: 0;
+}
+
+// J3 override
+
+.items-more{
+	.nav li a,
+	h3{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
